<resources>
    <string name="app_name">Fitness Logger</string>

    <!--Test banner add id-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Test app id-->
    <string name="test_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <!--AdMob app id-->
    <string name="admob_app_id">ca-app-pub-8793009434941430~3616566489</string>

    <!--Buttons-->
    <string name="manage_exercises">Manage Exercises</string>
    <string name="log_training_session">Log Training Session</string>
    <string name="add_training_session">Add Training Session</string>
    <string name="check_logged_sessions">Check Logged Sessions</string>
    <string name="check_planned_sessions">Check Planned Sessions</string>
    <string name="log_out">Log out</string>

    <!--AddExerciseActivity-->
    <string name="category">Category</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="exercise_description">Exercise Description:</string>
    <string name="add">Add</string>

    <!--Error messages-->
    <string name="no_network">No network connectivity. Please check your network connection and try again.</string>
    <string name="name_description_blank">Name and Description cannot be blank. Please enter appropriate information in the text fields.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--Widget-->
    <string name="all_exercises_text">Exercises added by all users</string>

</resources>
