<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddExerciseActivity"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/exercise_categories"/>

        <TextView
            android:id="@+id/exerciseNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name" />

        <EditText
            android:id="@+id/exerciseNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/exerciseDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_description" />

        <EditText
            android:id="@+id/exerciseDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <Button
        android:id="@+id/addExerciseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/add" />


</RelativeLayout>